:art: Updating editor config

--- a/.editorconfig
+++ b/.editorconfig
@@ -6,12 +6,12 @@ insert_final_newline = true
 
 [*.php]
 charset = utf-8
-indent_style = tab
+indent_style = space
 indent_size = 4
 
 [*.stub]
 charset = utf-8
-indent_style = tab
+indent_style = space
 indent_size = 4
 
 [composer.json]
