Add npm to workspace container

--- a/laradock/docker-compose.yml
+++ b/laradock/docker-compose.yml
@@ -18,7 +18,7 @@ services:
           - INSTALL_XDEBUG=${WORKSPACE_INSTALL_XDEBUG}
           - INSTALL_SOAP=${WORKSPACE_INSTALL_SOAP}
           - INSTALL_MONGO=${WORKSPACE_INSTALL_MONGO}
-          - INSTALL_NODE=${WORKSPACE_INSTALL_NODE}
+          - INSTALL_NODE=true
           - INSTALL_YARN=${WORKSPACE_INSTALL_YARN}
           - INSTALL_DRUSH=${WORKSPACE_INSTALL_DRUSH}
           - INSTALL_AEROSPIKE_EXTENSION=${WORKSPACE_INSTALL_AEROSPIKE_EXTENSION}
