--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "doctrine/dbal": "^2.5",
         "kozz/laravel-guzzle-provider": "~6.0",
         "laravel/framework": "5.4.*",
         "laravel/socialite": "^3.0",
