--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,9 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+ECHO_SERVER_HOST=127.0.0.1
+ECHO_SERVER_PORT=6001
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
