--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,10 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=redis
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=redis
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -27,6 +27,9 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+ECHO_SERVER_HOST=127.0.0.1
+ECHO_SERVER_PORT=6001
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
