--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "scripts": {
     "dev": "npm run development",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
     "watch-poll": "npm run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "init-echo": "laravel-echo-server init",
     "start-echo": "laravel-echo-server start",
     "start-server": "php artisan serve --port=81",
@@ -15,15 +15,18 @@
     "start-queue": "php artisan queue:work"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2017": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
-    "eslint-plugin-vue": "^2.0.1"
+    "eslint-plugin-vue": "^2.0.1",
+    "laravel-mix": "^4.0.0",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.15.2",
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.5.21"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -32,8 +35,8 @@
     "jquery": "^3.1.1",
     "laravel-echo": "^1.3.0",
     "laravel-echo-server": "^1.2.8",
-    "laravel-mix": "0.*",
     "lodash": "^4.17.4",
+    "node-sass": "^4.11.0",
     "vue": "^2.1.10"
   }
 }
